generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model User {
  id        String   @id @default(cuid())
  name      String
  email     String   @unique
  password  String
  role      String   // KAPRODI, ADMIN, DOSEN, MAHASISWA
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  mahasiswa Mahasiswa?
  dosen     Dosen?
}

model Mahasiswa {
  id        String   @id @default(cuid())
  nim       String   @unique
  angkatan  String
  status    String   @default("AKTIF")
  user      User     @relation(fields: [userId], references: [id])
  userId    String   @unique

  krs             KRS[]
  nilaiMahasiswa  NilaiMahasiswa[]
}

model Dosen {
  id        String   @id @default(cuid())
  nidn      String   @unique
  nip       String   @unique
  user      User     @relation(fields: [userId], references: [id])
  userId    String   @unique

  pengampu  Pengampu[]
}

model MataKuliah {
  id        String   @id @default(cuid())
  kode      String   @unique
  nama      String
  sks       Int
  semester  Int

  kelas     Kelas[]
  cpmk      CPMK[]
}

model Kelas {
  id            String   @id @default(cuid())
  nama          String
  tahun_ajaran  String
  semester      String
  mataKuliah    MataKuliah @relation(fields: [mkId], references: [id])
  mkId          String

  pengampu      Pengampu[]
  krs           KRS[]
  komponenNilai KomponenNilai[]
}

model Pengampu {
  id        String   @id @default(cuid())
  kelas     Kelas    @relation(fields: [kelasId], references: [id])
  kelasId   String
  dosen     Dosen    @relation(fields: [dosenId], references: [id])
  dosenId   String
}

model CPL {
  id        String   @id @default(cuid())
  kode      String   @unique
  deskripsi String   @db.Text
  pi        PI[]
}

model PI {
  id        String   @id @default(cuid())
  kode      String   @unique
  deskripsi String   @db.Text
  cpl       CPL      @relation(fields: [cplId], references: [id])
  cplId     String
  cpmk      CPMK[]
}

model CPMK {
  id        String   @id @default(cuid())
  kode      String
  deskripsi String   @db.Text
  pi        PI       @relation(fields: [piId], references: [id])
  piId      String
  mataKuliah MataKuliah @relation(fields: [mkId], references: [id])
  mkId      String

  bobotCpmk BobotCPMK[]
}

model KomponenNilai {
  id        String   @id @default(cuid())
  nama      String   // UTS, UAS, Tugas
  bobot     Float    // Persentase e.g., 30, 40
  kelas     Kelas    @relation(fields: [kelasId], references: [id])
  kelasId   String

  bobotCpmk BobotCPMK[]
  nilaiMahasiswa NilaiMahasiswa[]
}

model BobotCPMK {
  id            String   @id @default(cuid())
  komponen      KomponenNilai @relation(fields: [komponenId], references: [id])
  komponenId    String
  cpmk          CPMK     @relation(fields: [cpmkId], references: [id])
  cpmkId        String
  bobot         Float    // Persentase, total untuk 1 CPMK di kelas tsb hrs 100%
}

model NilaiMahasiswa {
  id            String   @id @default(cuid())
  mahasiswa     Mahasiswa @relation(fields: [mahasiswaId], references: [id])
  mahasiswaId   String
  komponen      KomponenNilai @relation(fields: [komponenId], references: [id])
  komponenId    String
  nilai         Float    // 0 - 100
}

model KRS {
  id            String   @id @default(cuid())
  mahasiswa     Mahasiswa @relation(fields: [mahasiswaId], references: [id])
  mahasiswaId   String
  kelas         Kelas    @relation(fields: [kelasId], references: [id])
  kelasId       String
}
